# PA2-2022

./: .gitignore  .gitlab-ci.yml  Dockerfile  README.md
cv02/: my.h
labs/cv02/: CMakeLists.txt  dateList.txt  main.cpp  my.cpp  my.h
labs/cv03/: CMakeLists.txt  child.cpp  child.h  date.cpp  date.h  main.cpp  vaccine.cpp  vaccine.h
onepoint/01_jednobodova/: main.cpp
onepoint/01_jednobodova/tests/: test10_in.txt  test2_in.txt  test3_in.txt  test4_in.txt  test5_in.txt  test6_in.txt  test7_in.txt  test8_in.txt  test9_in.txt
onepoint/02_jednobodova/: CMakeLists.txt  main.cpp
onepoint/03_jednobodova/: main.cpp
onepoint/04_jednobodova/: CMakeLists.txt  main.cpp
onepoint/05_jednobodova/: CMakeLists.txt  main.cpp
onepoint/07_jednobodova/: CMakeLists.txt  main.cpp  main_binarysearch.cpp
progtests/progtest_01/: CMakeLists.txt  main.cpp  main_old.cp  test.cpp
progtests/progtest_01/tests/: in_4585071.huf  in_4585946.huf  progtest_01.huf  progtest_02.huf
progtests/progtest_02/: CMakeLists.txt  main.cpp
progtests/progtest_03/: CMakeLists.txt  main.cpp
progtests/progtest_04/: CMakeLists.txt  main.cpp
progtests/progtest_05/: CMakeLists.txt  main.cpp
progtests/progtest_06/: CMakeLists.txt  main.cpp
semester/: .gitlab-ci.yml  CMakeLists.txt  Doxyfile  Makefile  Makefile.my  README.md
semester/examples/: circle.tspaint  house.in.tspaint  housepart.tspaint  largefile.tspaint  rectangle.in.tspaint  skyofstars.tspaint  stars.py
semester/src/: Application.cpp  Application.h  Circle.cpp  Circle.h  Color.cpp  Color.h  ColorPalett.cpp  ColorPalett.h  ColorPalette.cpp  ColorPalette.h  Command.cpp  Command.h  CommandImpl.cpp  CommandImpl.h  CommandParameters.cpp  CommandParameters.h  Ellipse.cpp  Ellipse.h  Export.cpp  Export.h  ExportBMP.cpp  ExportBMP.h  ExportHelper.cpp  ExportHelper.h  ExportSVG.cpp  ExportSVG.h  ExportTspaint.cpp  ExportTspaint.h  Formatter.cpp  Formatter.h  FormatterParams.cpp  FormatterParams.h  Helper.cpp  Helper.h  Interface.cpp  Interface.h  Line.cpp  Line.h  Pixel.h  PolyLine.cpp  (+27 more)
semester/test/: CMakeLists.txt  main.cpp
semestral/: CMakeLists.txt  README.md
semestral/src/: CApplication.cpp  CApplication.h  CColor.cpp  CColor.h  CInterface.cpp  CInterface.h  CObject.cpp  CObject.h  CPosition.cpp  CPosition.h  CScreen.cpp  CScreen.h  main.cpp
semestralProject/: Makefile  README.md  prohlaseni.txt
semestralProject/examples/: abstract_rose.tspaint  colourful_ellipses.tspaint  house.tspaint
semestralProject/src/: Application.cpp  Circle.h  Color.cpp  Command.cpp  Command.h  ExportBMP.cpp  ExportSVG.cpp  ExportTspaint.h  Helper.cpp  Helper.h  Interface.cpp  PolyLine.h  ProgtestErrors.h  Shape.cpp  Shape.h  ShapeGroup.h  Star.cpp  SysCommand.cpp  Tspaint.cpp  constants.h  main.cpp  messages.h  progtesterrors.txt
semestralProject/test/: README.md
